--- a/aoc2023/subjects/1.md
+++ b/aoc2023/subjects/1.md
@@ -26,7 +26,11 @@ document (your puzzle input) has been amended by a very young Elf who was
 apparently just excited to show off her art skills. Consequently, the Elves
 are having trouble reading the values on the document.
 
-The newly-improved calibration document consists of lines of text; each line originally contained a specific calibration value that the Elves now need to recover. On each line, the calibration value can be found by combining the first digit and the last digit (in that order) to form a single two-digit number.
+The newly-improved calibration document consists of lines of text; each line
+originally contained a specific calibration value that the Elves now need to
+recover. On each line, the calibration value can be found by combining the
+first digit and the last digit (in that order) to form a single two-digit
+number.
 
 For example:
 
@@ -40,15 +44,19 @@ treb7uchet
 In this example, the calibration values of these four lines are `12`, `38`, `15`,
 and `77`. Adding these together produces `142`.
 
-Consider your entire calibration document. What is the sum of all of the calibration values?
+Consider your entire calibration document. What is the sum of all of the
+calibration values?
 
 __Part 2 :__
 
-Your calculation isn't quite right. It looks like some of the digits are actually spelled out with letters: `one`, `two`, `three`, `four`, `five`, `six`, `seven`, `eight`, and nine also count as valid "digits".
+Your calculation isn't quite right. It looks like some of the digits are actually
+spelled out with letters: `one`, `two`, `three`, `four`, `five`, `six`, `seven`,
+`eight`, and nine also count as valid "digits".
 
-Equipped with this new information, you now need to find the real first and last digit on each line. For example:
+Equipped with this new information, you now need to find the real first and last
+digit on each line. For example:
 
-```
+```Text
 two1nine
 eightwothree
 abcone2threexyz
@@ -58,6 +66,7 @@ zoneight234
 7pqrstsixteen
 ```
 
-In this example, the calibration values are `29`, `83`, `13`, `24`, `42`, `14`, and `76`. Adding these together produces `281`.
+In this example, the calibration values are `29`, `83`, `13`, `24`, `42`, `14`,
+and `76`. Adding these together produces `281`.
 
 What is the sum of all of the calibration values?
