ok now E1 is finished

--- a/aoc2023/subjects/1.md
+++ b/aoc2023/subjects/1.md
@@ -1,7 +1,7 @@
 
 # Exercice 1 : "Trebuchet?!"
 
-__Part 1 :__
+## Part 1
 
 Something is wrong with global snow production, and you've been selected to take
 a look. The Elves have even given you a map; on it, they've used stars to mark
@@ -47,7 +47,7 @@ and `77`. Adding these together produces `142`.
 Consider your entire calibration document. What is the sum of all of the
 calibration values?
 
-__Part 2 :__
+## Part 2
 
 Your calculation isn't quite right. It looks like some of the digits are actually
 spelled out with letters: `one`, `two`, `three`, `four`, `five`, `six`, `seven`,
